{
  "version": 4,
  "terraform_version": "1.1.8",
  "serial": 340,
  "lineage": "a358c6cb-0dc1-f41e-2bf9-2178295883ff",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "clip-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02b92c281a4d3dc79",
            "arn": "arn:aws:ec2:us-west-2:562462682229:instance/i-097b020411c4f66f5",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-097b020411c4f66f5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00e1b7fffc13fe4c8",
            "private_dns": "ip-172-31-12-98.us-west-2.compute.internal",
            "private_ip": "172.31.12.98",
            "public_dns": "ec2-35-89-29-69.us-west-2.compute.amazonaws.com",
            "public_ip": "35.89.29.69",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05b7c44a515878bb1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "clip_ec2_sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09c257a8caae0631a",
            "tags": {
              "Name": "clip-ec2"
            },
            "tags_all": {
              "Name": "clip-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d270c7417fdbefb2"
            ]
          },
          "dependencies": [
            "aws_instance.clip-mysql",
            "aws_key_pair.my-key",
            "data.template_file.init",
            "data.template_file.init2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "clip-mysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02b92c281a4d3dc79",
            "arn": "arn:aws:ec2:us-west-2:562462682229:instance/i-0166f4905ef99b059",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0166f4905ef99b059",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "mykey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-017da0b648d425402",
            "private_dns": "ip-172-31-45-253.us-west-2.compute.internal",
            "private_ip": "172.31.45.253",
            "public_dns": "ec2-18-236-116-238.us-west-2.compute.amazonaws.com",
            "public_ip": "18.236.116.238",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01ac616f160db36d4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "clip_mysql-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0aa8c97f5d3a371f9",
            "tags": {
              "Name": "clip-mysql"
            },
            "tags_all": {
              "Name": "clip-mysql"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e0c28289279e013a"
            ]
          },
          "dependencies": [
            "aws_key_pair.my-key",
            "data.template_file.init2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "clip_ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:562462682229:security-group/sg-0d270c7417fdbefb2",
            "description": "Security Group for EC2-APP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d270c7417fdbefb2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Internet open",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH intance",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "clip_ec2_sg",
            "name_prefix": "",
            "owner_id": "562462682229",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "EC2-APP"
            },
            "tags_all": {
              "Name": "EC2-APP"
            },
            "timeouts": null,
            "vpc_id": "vpc-016fb87b0bdaaa848"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "clip_mysql-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:562462682229:security-group/sg-0e0c28289279e013a",
            "description": "Security Group for EC2-APP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e0c28289279e013a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "MySQL Port",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH intance",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "clip_mysql-sg",
            "name_prefix": "",
            "owner_id": "562462682229",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "MySQL Database"
            },
            "tags_all": {
              "Name": "MySQL Database"
            },
            "timeouts": null,
            "vpc_id": "vpc-016fb87b0bdaaa848"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}